django_codenerix_email (4.0.39) stable; urgency=medium

  * Added options to chosse the IMAP selector and to DELETE emails or set them as SEEN for a more granular control

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 08:06:00 +0200


django_codenerix_email (4.0.38) stable; urgency=medium

  * Added filtering support for IMAP receiving emails

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Wed, 08 Oct 2025 07:00:00 +0200


django_codenerix_email (4.0.37) stable; urgency=medium

  * Content Subtype removed from send()

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 12:31:00 +0200


django_codenerix_email (4.0.36) stable; urgency=medium

  * Deprecation warning repaired

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 12:08:00 +0200


django_codenerix_email (4.0.35) stable; urgency=medium

  * Email commands deprecated to a new more standard name

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 11:48:00 +0200


django_codenerix_email (4.0.34) stable; urgency=medium

  * Removed forgotten print in the code

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 11:07:00 +0200


django_codenerix_email (4.0.33) stable; urgency=medium

  * Command recv_emails wont't fail if silent is enabled

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 30 Sep 2025 07:49:00 +0200


django_codenerix_email (4.0.32) stable; urgency=medium

  * Added details modal window for sent and received emails

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 29 Sep 2025 08:54:00 +0200


django_codenerix_email (4.0.31) stable; urgency=medium

  * Several improvements on type checking

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 29 Sep 2025 08:36:00 +0200


django_codenerix_email (4.0.30) stable; urgency=medium

  * Added support to receive emails throught IMAP, analize bounces and relate with sent emails

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Fri, 26 Sep 2025 06:37:00 +0200

