@@ -94,7 +94,7 @@ class EmailMessageForm(GenModelForm):
         return [
             (
                 _("Details"),
-                6,
+                4,
                 ["uuid", 3],
                 ["created", 3],
                 ["updated", 3],
@@ -102,19 +102,26 @@ class EmailMessageForm(GenModelForm):
                 ["eto", 3],
                 ["subject", 3],
                 ["opened", 3],
-                ["content_subtype", 3],
             ),
             (
                 _("System"),
-                6,
+                4,
                 ["sending", 3],
                 ["sent", 3],
                 ["error", 3],
-                ["retries", 3],
-                ["priority", 3],
                 ["log", 3],
+                ["content_subtype", 3],
                 ["unsubscribe_url", 3],
                 ["headers", 3],
+            ),
+            (
+                _("Status"),
+                4,
+                ["retries", 3],
+                ["priority", 3],
+                ["bounces_total", 3],
+                ["bounces_soft", 3],
+                ["bounces_hard", 3],
             ),
             (
                 _("Body"),
