@@ -1,0 +1,28 @@
+# Generated by Django 5.2.7 on 2025-10-14 05:10
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('codenerix_email', '0014_emailreceived'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='emailmessage',
+            name='bounces_hard',
+            field=models.PositiveIntegerField(default=0, verbose_name='Hard bounces'),
+        ),
+        migrations.AddField(
+            model_name='emailmessage',
+            name='bounces_soft',
+            field=models.PositiveIntegerField(default=0, verbose_name='Soft bounces'),
+        ),
+        migrations.AddField(
+            model_name='emailmessage',
+            name='bounces_total',
+            field=models.PositiveIntegerField(default=0, verbose_name='Total bounces'),
+        ),
+    ]
