@@ -14,7 +14,7 @@
 </td>
 <td>{{row.eto|codenerix}}</td>
 <td><nobr>{{row.subject|codenerix}}</nobr></td>
-<td class="text-nowrap">{{row.bounces_total_count|codenerix}}</td>
+<td class="text-nowrap">{{row.bounces_total|codenerix}}</td>
 <td><center>{{row.retries|codenerix}}</center></td>
 <td class="text-nowrap">{{row.next_retry|codenerix}}</td>
 <td><center>{{row.pk|codenerix}}</center></td>
